clusters/minikube/apps/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: level0
---
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
