clusters/minikube/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: level0
  namespace: level0
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: level0
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: level0
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: level0-web
                port:
                  number: 8080
